 - add Spring.SetProjectileTarget(number projectileID, [number objectID, string objectType] | [number x, number y, number z]) --> boolean
 - add Spring.GetProjectileTarget(number projectileID) --> number targetID, string targetType
 - add Spring.SpawnProjectile(number weaponDefID, table projectileParams) --> number projectileID | nil



-- 93.2 ---------------------------------------------------------
 - fixed unitsync in linux static builds

-- 93.1 ---------------------------------------------------------
Bugfixes:
 - fixed treedrawer crash
 - fixed MT crashes
 - fixed X11 cursor offset
 - fixed smooth camera transitions
 - fixed clipped sun
 - fixed selection sounds
 - fixed attack cursor for kamikaze units
 - fixed wrong assimp texture


-- 93.0 ---------------------------------------------------------
Bugfixes:
 - fixed disappearing GUI with non-GLSL drivers & grass rendering (3dtrees=1)
 - fixed not working assimp textures
 - fixed /ally
 - fixed /chat[|ally|spec|all], so it doesn't misbehave when called from lua
 - fixed attack-ground orders placed on water
 - fix bug in footprint overlap detection reported by dnw
 - make dead/crashing/stunned units unshareable (may fix #3476)
 - fixed objects with cylindrical CVs would not take damage if hit in rear endcap
 - block Lua from creating non-uniformly scaled COLVOL_TYPE_SPHERE volumes
 - make sure pastetext and buffertext don't strip whitespaces from the attached message
 - allow whisper between spec <-> spec (player -> spec and spec -> player whispers are still forbidden)
 - fixed flying transport reservation not flushed properly with area commands (#3478)
 - fix #3481 (unit targets not flushed on cloak + jam)
 - fix #3488 (avoidFriendly check works improperly if firepoint is inside friendly unit)
 - fix bug in ray-ground intersection logic
 - make mutual push-resistant unit collisions more like 0.82.x (smoth's issue)